# MongoDB_API/MongoDB_API/Models/Feedback.cs
@@ -10,10 +10,10 @@ namespace MongoDB_API.Models
     public class Feedback
     {
         [BsonId]
-        public ObjectId Id { get; set; }
+        [BsonRepresentation(MongoDB.Bson.BsonType.ObjectId)]
+        public string Id { get; set; }
         public string Name { get; set; }
     
-
         public string F_Purchase { get; set; }
         public string F_Afil { get; set; }
         public string F_Delivery { get; set; }
