# MongoDB_API/MongoDB_API/Models/Product.cs
@@ -9,15 +9,16 @@ namespace MongoDB_API.Models
 {
     public class Product
     {
-        [BsonId] 
-        public ObjectId Id { get; set; }
+        [BsonId]
+        [BsonRepresentation(MongoDB.Bson.BsonType.ObjectId)]
+        public string Id { get; set; }
         public string Name { get; set; }
         public int Price { get; set; }
 
-        public DateTime ExpiryDate { get; set; }
+        public int Cantidad { get; set; }
 
         public string Category { get; set; }
 
-
+        
     }
 }
